[package]
name = "short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
regex = "1"
#clap = { version = "3.1.17", features = ["derive"] }
clap = { version = "3.2.16" , features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
minheap = { git = "https://github.com/marvinmednick/heap.git" }
